# pass-docker

./: .demo_env  .eclipse-pass.JHUAWSdemo_env  .eclipse-pass.JHUAWSstage_env  .eclipse-pass.JHUAWSstage_env.template  .eclipse-pass.demo_env  .eclipse-pass.local_env  .eclipse-pass.nightly_env  .eclipse-pass.stage_env  .env  .gitignore  .nightly_env  README.md  demo.sh  demo.yml  demo_data.json  docker-compose-deposit-invenio-rdm.yml  docker-compose-deposit.yml  docker-compose-dspace.yml  docker-compose-nightly.yml  docker-compose.yml  dspace-cli.ingest.yml  dspace-cli.yml  eclipse-pass.JHUAWSdemo.yml  eclipse-pass.JHUAWSstage.yml  eclipse-pass.base.yml  eclipse-pass.demo.yml  eclipse-pass.local.yml  eclipse-pass.nightly.yml  eclipse-pass.stage.yml  harvard.yml  wait-to-start.sh
.github/workflows/: debug_test.yml  deploy_passdemo.yml  release.yml  (+4 more)
activemq/: activemq.xml
authz/: Dockerfile  wait_and_start.sh
certs/: cert-gen-idp.sh  cert-gen-idp.yml  cert-gen-invenio.yml  cert-gen.sh
demo-proxy/: Dockerfile
deposit/: deposit-repositories.json
dspace/: item-submission.xml
ember/: Dockerfile  nginx-template.conf
httpd-proxy/: Dockerfile
idp/: Dockerfile  entrypoint.sh
indexer/: Dockerfile
invenio-rdm/: README.md  build.sh  start.sh  stop.sh
invenio-rdm/pass-docker-invenio-rdm/site/: .gitkeep  setup.cfg
invenio-rdm/pass-docker-invenio-rdm/site/pass_docker_invenio_rdm/: views.py  webpack.py
ldap/: Dockerfile  entrypoint.sh  pass.ldif
localstack/: aws_bootstrap.sh  sqs_bootstrap.sh
messaging/: Dockerfile  entrypoint.sh
testing/: user_loader.sh
(+72 files in other folders)
