
[metadata]
name = pass-docker-invenio-rdm

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    pass_docker_invenio_rdm_views = pass_docker_invenio_rdm.views:create_blueprint
invenio_assets.webpack =
    pass_docker_invenio_rdm_theme = pass_docker_invenio_rdm.webpack:theme
